tests/baselines/reference/jsxJsxsCjsTransformCustomImport(jsx=react-jsx).errors.txt
jsxJsxsCjsTransformCustomImport.tsx(2,11): error TS2875: This JSX tag requires the module path 'preact/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
jsxJsxsCjsTransformCustomImport.tsx(2,11): error TS6267: Cannot find name 'React', the fragment factory, which is required to use fragments.


==== jsxJsxsCjsTransformCustomImport.tsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    const a = <>
              ~~
!!! error TS2875: This JSX tag requires the module path 'preact/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
              ~~
!!! error TS6267: Cannot find name 'React', the fragment factory, which is required to use fragments.
      <p></p>
      text
      <div className="foo"></div>
    </>
    
    export {};